--- a/package.json
+++ b/package.json
@@ -22,26 +22,27 @@
     "@types/qrcode": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.26.0",
+    "postcss": "^8.4.24",
+    "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
+    "svelte-preprocess": "^5.0.3",
+    "tailwindcss": "^3.3.2",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.3.0",
-    "postcss": "^8.4.24",
-    "postcss-load-config": "^4.0.1",
-    "svelte-preprocess": "^5.0.3",
-    "autoprefixer": "^10.4.14",
-    "tailwindcss": "^3.3.2"
+    "vite": "^4.3.0"
   },
   "type": "module",
   "dependencies": {
     "qrcode": "^1.5.3",
     "socket.io": "^4.6.2",
-    "socket.io-client": "^4.6.2"
+    "socket.io-client": "^4.6.2",
+    "svelte-local-storage-store": "^0.5.0"
   }
 }
