--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@floating-ui/dom": "^1.6.3",
     "qrcode": "^1.5.3",
     "socket.io": "^4.6.2",
     "socket.io-client": "^4.6.2",
